fixing that annoying whitespace issue

--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -20,6 +20,7 @@ body {
 
 .full-width{
   width: 100%;
+  overflow-x: hidden;
 }
 
 article.content{
